<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_news"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_mess"
            android:title="@string/menu_messages"/>
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group_list"
            android:title="@string/groups"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search" />
    </group>
</menu>
