<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.finish.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.finish.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_messages"
        android:name="com.example.finish.ui.messages.MessagesFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/messages_fragment"/>
    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.finish.ui.people.PeopleFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/people_fragment"/>
    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.finish.ui.groups_list.GroupsList"
        android:label="@string/groups"
        tools:layout="@layout/groups_list_fragment"/>
</navigation>